<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<PreferenceCategory android:title="@string/settings_animation_category_juggler_color_category_all">
		<com.jonglen7.jugglinglab.ui.ColorPickerPreference
			android:key="colorPicker" 
			android:title="@string/settings_animation_category_juggler_color_color" />
				
		<CheckBoxPreference 
			android:key="use_mixed_color" 
			android:title="@string/settings_animation_category_juggler_color_category_mixed_title" 
			android:summary="@string/settings_animation_category_juggler_color_category_mixed_summary"/>
	</PreferenceCategory>
	
	
	<PreferenceCategory 
		android:key="juggler_by_juggler_category"
		android:title="@string/settings_animation_category_juggler_color_category_jbj_title">
			<!-- Juggler by Juggler ColorPickerPreference list -->
	</PreferenceCategory>
	
</PreferenceScreen>	